#3: postgres introduced in docker-compose; created_at, updated_at columns...
